Add tab to anythings

--- a/style/style.css
+++ b/style/style.css
@@ -30,11 +30,61 @@
 	transition: padding-right 0.5s;
 }
 .like-btn:hover span, .like-btn:active span {
-	padding-right: 25px;
+	padding-right: 10px;
 }
 p{
 	font-size: 16px;
 	text-align: center;
 	padding: 5px 5px;
 	font-family: Bedrock;
+}
+// tab
+/*----- Tab Links -----*/
+/* Clearfix */
+.tab-links {
+}
+.tab-links span {
+	text-align: center;
+	width: 24%;
+    margin:0px 0px;
+    float:left;
+    list-style:none;
+	border: 1px solid #0D6;
+    padding:4px 0px;
+    display:inline-block;
+    border-radius:2px;
+    background:#0D6;
+    font-size:10px;
+    transition:all linear 0.15s;
+}
+
+span.active, span:hover, span.active:hover {
+    background:#fff;
+    color:#4c4c4c;
+}.active a{
+	text-color :#f0f;
+}
+
+/*----- Content of Tabs -----*/
+.tab-content {
+    border-radius:3px;
+    background:#fff;
+}
+
+.tab {
+    display:none;
+}
+
+.tab.active {
+    display:block;
+}
+.con-tab{
+	padding: 2px;
+	border: 3px double #8A2BE2;
+	height: 120px
+}
+span a{
+	width: 100%;
+	text-align: center;
+    text-decoration:none;
 }
