--- a/css/fab-button.css
+++ b/css/fab-button.css
@@ -1,26 +1,25 @@
 .fab-button{
-  box-sizing: border-box;
   background-color: #F44336;
   margin: 2px;
   width: 50px;
   height: 50px;
-  border-radius: 50%;
-  border: none;
-  outline: none;
   color: #FFF;
   font-size: 25px;
   box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
+  transition: all .3s cubic-bezier(.4,0,.2,1);
+}
+.fab{
+  box-sizing: border-box;
+  border-radius: 50%;
+  border: none;
+  outline: none;
 }
 .fab-text{
-  box-sizing: border-box;
   background-color: #5890ff;
   right: 0px;
   bottom: 0px;
   width: 20px;
   height: 20px;
-  border-radius: 50%;
-  border: none;
-  outline: none;
   color: #FFF;
   font-size: 12px;
   box-shadow: 0 0 -2px rgba(0,0,0,.14), 0 -2px -4px rgba(0,0,0,.28);
@@ -29,7 +28,6 @@
 }
 .fab-button:hover{
   -webkit-transform: scale(1.1);
-  transition: all .3s cubic-bezier(.4,0,.2,1);
 }
 
 .fab-frame{
