--- a/css/fab-button.css
+++ b/css/fab-button.css
@@ -1,3 +1,11 @@
+a.weakReference{
+  color: #b310b6 !important;
+}
+a._wpv{
+  color: #2f82d5 !important;
+  text-decoration: underline !important;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 .fab-button{
   background-color: #F44336;
   margin: 2px;
