Facebook: change font left, right Sidebar

--- a/css/fab-button.css
+++ b/css/fab-button.css
@@ -6,7 +6,7 @@ a._wpv{
   text-decoration: underline !important;
   font-family: Monospace !important;
 }
-#sideNav, .noGrip, a.profileLink, span.fwb.fcg a{
+#sideNav, .noGrip, div._r_m, a.profileLink, span.fwb.fcg a{
   font-family: Monospace !important;
 }
 .fab-button{
