--- a/css/popup.css
+++ b/css/popup.css
@@ -1,6 +1,10 @@
 body{
     min-width: 400px;
 }
+.container{
+    margin-bottom: 2px;
+    min-height: 200px;
+}
 div.btn.btn-success{
     float: right;
 }
@@ -9,6 +13,7 @@ div.btn.btn-success{
     height: 50px;
 }
 div.list{
+    min-height: 50px;
     max-height: 285px;
     overflow: auto;
 }
@@ -23,4 +28,8 @@ div.btn-group{
     position: absolute;
     top: 0px;
     left: 0px;
+}
+.panel-body{
+    width: 100%;
+    padding: 0px;
 }
