--- a/css/popup.css
+++ b/css/popup.css
@@ -31,5 +31,7 @@ div.btn-group{
 }
 .panel-body{
     width: 100%;
-    padding: 0px;
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
