Fake linkneverdie.com non AdBlock

--- a/css/fb.css
+++ b/css/fb.css
@@ -18,7 +18,7 @@ li._42fz[data-id="100004061350564"]{	/*your best friend*/
 	border-left: solid #38f;
 	border-right: solid 0.5px #f0f;
 }
-._3u6q ._2s1y{
+._3u6q ._2s1y,._206m .fbNubFlyoutTitlebar{
 	background: #7713f1 !important;
 }
 a._8_2[href="https://www.facebook.com/phony.97"],
