Refact my source code

--- a/css/popup.css
+++ b/css/popup.css
@@ -26,12 +26,12 @@ div.btn-group{
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
 }
 .panel-body{
     width: 100%;
-    padding-top: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-top: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
