--- a/css/fb.css
+++ b/css/fb.css
@@ -1,33 +1,38 @@
 a.UFICommentActorName,
 .fwn.fcg .fwb.fcg a[href^="https://www.facebook.com/"],
-.fcg .fwb a.profileLink{
-  color: #b310b6 !important;
+.fcg .fwb a.profileLink {
+    color: #2f82d5 !important;
 }
-a._wpv, ._1nb_.fwn.fcg a{
-  color: #2f82d5 !important;
-  text-decoration: underline !important;
-    font-family: Monospace, serif !important;
+
+a.weakReference {
+    color: #b310b6 !important;
 }
-#sideNav, .noGrip, div._r_m,div._2pi4, a.profileLink, span.fwb.fcg a{
+
+a._wpv, ._1nb_.fwn.fcg a {
+    color: #2f82d5 !important;
+    text-decoration: underline !important;
+}
+
+#sideNav, .noGrip, div._r_m, div._2pi4, a.profileLink, span.fwb.fcg a {
     font-family: Monospace, serif !important;
 }
 
 /*  List your best friend*/
 li._42fz[data-id="100008187521677"],
 li._42fz[data-id="100011401676480"],
-li._42fz[data-id="100004061350564"]{
-	border-left: solid #38f;
-	border-right: solid 0.5px #f0f;
+li._42fz[data-id="100004061350564"] {
+    border-left: solid #38f;
+    border-right: solid 0.5px #f0f;
 }
 
 /*  Header*/
-._3u6q ._2s1y,._206m .fbNubFlyoutTitlebar{
-	background: #7713f1 !important;
+._3u6q ._2s1y, ._206m .fbNubFlyoutTitlebar {
+    background: #7713f1 !important;
 }
 
 /*  Your profile*/
 a._2nlw[href="https://www.facebook.com/phony.97"],
-a._2nlw[href="https://www.facebook.com/RemoveU"]{ /*your profile*/
+a._2nlw[href="https://www.facebook.com/RemoveU"] { /*your profile*/
     background-image: url(/rsrc.php/v3/yC/r/QRYlLwFgbbH.png);
     background-repeat: no-repeat;
     background-size: auto;
