--- a/css/popup.css
+++ b/css/popup.css
@@ -17,9 +17,26 @@ div.btn.btn-success {
 }
 
 div.list {
-    min-height: 50px;
-    max-height: 285px;
+    padding-right: 10px;
+    height: 162px;
     overflow: auto;
+}
+
+div.list::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+div.list::-webkit-scrollbar {
+    width: 8px;
+    background-color: #F5F5F5;
+}
+
+div.list::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
 }
 
 div.btn-group {
@@ -40,4 +57,13 @@ div.btn-group {
     padding-top: 0;
     padding-left: 0;
     padding-right: 0;
+}
+
+.input-group.form-group {
+    margin-top: 10px;
+}
+
+#option .checkbox.btn {
+    margin: 5px 0;
+    border-radius: 4px;
 }
