--- a/css/all_page.css
+++ b/css/all_page.css
@@ -1,20 +1,16 @@
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #F5F5F5;
+    border-radius: 5px;
+    background-color: #f1f1f1;
 }
 
 ::-webkit-scrollbar {
     width: 10px;
-    background-color: #F5F5F5;
+    background-color: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
-
-    background: #F90 -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%,
-    transparent 25%,
-    transparent 50%,
-    rgba(255, 255, 255, .2) 50%,
-    rgba(255, 255, 255, .2) 75%,
-    transparent 75%,
-    transparent);
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #c1c1c1;
 }
