--- a/css/popup.css
+++ b/css/popup.css
@@ -26,6 +26,10 @@ div.list {
     overflow: auto;
 }
 
+div.btn-group.btn-group-justified>span.btn{
+    text-align: center;
+}
+
 div.list::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
