--- a/src/css/new-tab.css
+++ b/src/css/new-tab.css
@@ -33,9 +33,6 @@ a:hover {
     text-decoration: none;
 }
 
-section, footer, header, aside {
-    display: block;
-}
 
 /*-------------------------
 	The clocks
@@ -438,17 +435,6 @@ section, footer, header, aside {
 }
 
 /*-------------------------
-		AM/PM
---------------------------*/
-
-#clock .ampm {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    font-size: 12px;
-}
-
-/*-------------------------
 		Button
 --------------------------*/
 
@@ -458,19 +444,14 @@ section, footer, header, aside {
 }
 
 a.button {
-    background-color: #f6a7b3;
-
-    background-image: -webkit-linear-gradient(top, #f6a7b3, #f0a3af);
-    background-image: -moz-linear-gradient(top, #f6a7b3, #f0a3af);
-    background-image: linear-gradient(top, #f6a7b3, #f0a3af);
-
+    background: #f6a7b3 -webkit-linear-gradient(top, #f6a7b3, #f0a3af);
     border: 1px solid #eb9ba7;
     border-radius: 2px;
 
     box-shadow: 0 2px 2px #ccc;
 
     color: #fff;
-    text-decoration: none !important;
+    text-decoration: none;
     padding: 15px 20px;
     display: inline-block;
     cursor: pointer;
@@ -478,82 +459,4 @@ a.button {
 
 a.button:hover {
     opacity: 0.9;
-}
-
-/*----------------------------
-	The Demo Footer
------------------------------*/
-
-footer {
-
-    width: 770px;
-    font: normal 16px Arial, Helvetica, sans-serif;
-    padding: 15px 35px;
-    position: fixed;
-    bottom: 0;
-    left: 50%;
-    margin-left: -420px;
-
-    background-color: #1f1f1f;
-
-    background-image: -webkit-linear-gradient(top, #1f1f1f, #101010);
-    background-image: -moz-linear-gradient(top, #1f1f1f, #101010);
-    background-image: linear-gradient(top, #1f1f1f, #101010);
-
-    border-radius: 2px 2px 0 0;
-
-    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.4);
-    z-index: 1;
-}
-
-footer a.tz {
-    font-weight: normal;
-    font-size: 16px !important;
-    text-decoration: none !important;
-    display: block;
-    margin-right: 300px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    color: #bfbfbf !important;
-    z-index: 1;
-}
-
-footer a.tz:before {
-    content: '';
-    background: url('http://cdn.tutorialzine.com/misc/enhance/v2_footer_bg.png') no-repeat 0 -53px;
-    width: 138px;
-    height: 20px;
-    display: inline-block;
-    position: relative;
-    bottom: -3px;
-}
-
-footer .close {
-    position: absolute;
-    cursor: pointer;
-    width: 8px;
-    height: 8px;
-    background: url('http://cdn.tutorialzine.com/misc/enhance/v2_footer_bg.png') no-repeat 0 0px;
-    top: 10px;
-    right: 10px;
-    z-index: 3;
-}
-
-footer #tzine-actions {
-    position: absolute;
-    top: 8px;
-    width: 500px;
-    right: 50%;
-    margin-right: -650px;
-    text-align: right;
-    z-index: 2;
-}
-
-footer #tzine-actions iframe {
-    display: inline-block;
-    height: 21px;
-    width: 95px;
-    position: relative;
-    float: left;
-    margin-top: 11px;
 }
